OPT-feat-39b5.1: JS timers timestamps now claculated at client side from server info and are independent from time measure procedure

--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -33,26 +33,23 @@
     <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/jquery-ui.js?{C_var_db_update}"></script>
 
     <script type="text/javascript">
+      // Этот скрипт находится здесь, потому что он должен быть выполнен максимально быстро
+      // Корректировка по времени запроса - если доступно
+      // var localTime = window.performance ? localTime = new Date(window.performance.timing.requestStart) : new Date();
+      var localTime = window.performance ? localTime = new Date(window.performance.timing.responseStart) : new Date();
+      var serverTime = new Date(parseFloat('{D_SN_TIME_MICRO}') * 1000);
+      var timeDiffSecondsMicro = localTime.valueOf() - serverTime.valueOf();
+      var timeDiff = Math.round((localTime.valueOf()) / 1000 - '{D_SN_TIME_MICRO}')
+              - localTime.getTimezoneOffset() * 60 - '{D_SN_TIME_ZONE_OFFSET}';
+
+      if(parseInt('{TIME_DIFF_MEASURE}')) {
+        jQuery.post("time_probe.php", {'localtime': localTime.valueOf(), 'utc_offset': -localTime.getTimezoneOffset() * 60}, function(data) {
+        });
+      }
+
       var dpath = '{dpath}';
       var sn_path_prefix = '{D_SN_ROOT_VIRTUAL}';
-      var SN_GOOGLE = '{SN_GOOGLE}' ? 1 : 0;
-
-      var localTime = new Date();
-      var serverTime = new Date('{TIME_NOW}' * 1000);
-      var timeDiffSeconds = '{TIME_DIFF_SECONDS}';
-      //var timeUTCOffset = parseInt('{TIME_UTC_OFFSET}') ? parseInt('{TIME_UTC_OFFSET}') : 0;
-      var timeDiff = parseInt('{TIME_DIFF}') ? parseInt('{TIME_DIFF}') : 0;
-      var TIME_DIFF_MEASURE = parseInt('{TIME_DIFF_MEASURE}') ? parseInt('{TIME_DIFF_MEASURE}') : 0;
-
-      // Этот скрипт находится здесь, потому что он должен быть выполнен максимально быстро
-      if(timeDiffSeconds === '' || TIME_DIFF_MEASURE) {
-        timeDiffSeconds = 0;
-        jQuery.post("time_probe.php", {'localtime': localTime.valueOf(), 'utc_offset': -localTime.getTimezoneOffset() * 60}, function(data) {
-          timeDiffSeconds = parseInt(data);
-        });
-      } else {
-        timeDiffSeconds = parseInt(timeDiffSeconds);
-      }
+      var SN_GOOGLE = parseInt('{SN_GOOGLE}') ? 1 : 0;
     </script>
 
     <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/sn_global.js?{C_var_db_update}"></script>
@@ -66,7 +63,7 @@
     <!-- ENDIF -->
 
     <!-- IF ADV_SEO_JAVASCRIPT -->
-    {ADV_SEO_JAVASCRIPT}
+      {ADV_SEO_JAVASCRIPT}
     <!-- ENDIF -->
     <table class="markup" width="100%" id="global_page_markup">
       <tr>
