UNI-feat-39b5.3: Show popup delay

--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -242,7 +242,7 @@
         </tr>
         <tr>
           <th>{L_tooltip_time}</th>
-          <th><input name="settings_tooltiptime" maxlength="2" size="2" value="{opt_toolt_data}" type="text"> {seconds}</th>
+          <th><input name="settings_tooltiptime" maxlength="4" size="4" value="{opt_toolt_data}" type="text"> {L_sys_milliseconds} (0 - по умолчанию)</th>
         </tr>
         <tr>
           <th>{L_mess_ammount_max}</th>
