--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -36,7 +36,8 @@
       // Этот скрипт находится здесь, потому что он должен быть выполнен максимально быстро
       // Корректировка по времени запроса - если доступно
       // var localTime = window.performance ? localTime = new Date(window.performance.timing.requestStart) : new Date();
-      var localTime = window.performance ? localTime = new Date(window.performance.timing.responseStart) : new Date();
+      // var localTime = window.performance ? localTime = new Date(window.performance.timing.responseStart) : new Date();
+      var localTime = new Date();
       var serverTime = new Date(parseFloat('{D_SN_TIME_MICRO}') * 1000);
       var timeDiffSecondsMicro = localTime.valueOf() - serverTime.valueOf();
       var timeDiff = Math.round((localTime.valueOf()) / 1000 - '{D_SN_TIME_MICRO}')
