UNI-misc-39b5.4: Made COLONIZATION button cell not include action columns

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -9,7 +9,7 @@ input, textarea, button {
   font-weight: bold !important;
 }
 
-.subheader {
+.subheader, tr.subheader > td, tr.subheader > th {
   background: #233452;
 }
 
