INT-misc-39b5.7: Now external links are double undercrossed

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -592,6 +592,12 @@ th.c_j, td.c_j
   cursor: pointer;
 }
 
+.link_external {
+  border-bottom: 3px double;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 .pointer
 {
   cursor: pointer;
