--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -68,4 +68,4 @@
     <!-- ENDIF -->
     <table class="markup" width="100%" id="global_page_markup">
       <tr>
-        <td valign="top" align="center"><div style="margin: 0 auto">
+        <td valign="top" align="center"><div style="margin: 0 auto" id="main_content_center">
