--- a/design/templates/OpenGame/planet_governor.tpl.html
+++ b/design/templates/OpenGame/planet_governor.tpl.html
@@ -25,7 +25,7 @@
       <!-- ENDIF -->
 
       <span style="position: absolute; top: 0; left: 20%; width: 60%; height: 16px; text-align: center; font-size: 120%;" class="icon_alpha">
-        <!-- IF PLANET_GOVERNOR_LEVEL -->{PLANET_GOVERNOR_LEVEL}<!-- ENDIF --><!-- IF $PLANET_GOVERNOR_LEVEL -->{$PLANET_GOVERNOR_LEVEL}<!-- ENDIF --><!-- IF PLANET_GOVERNOR_LEVEL_MAX -->/{PLANET_GOVERNOR_LEVEL_MAX}<!-- ENDIF --><!-- IF $PLANET_GOVERNOR_LEVEL_MAX -->/{$PLANET_GOVERNOR_LEVEL_MAX}<!-- ENDIF -->
+        <!-- IF PLANET_GOVERNOR_LEVEL -->{PLANET_GOVERNOR_LEVEL}<!-- IF PLANET_GOVERNOR_LEVEL_PLUS --><span class="zero">+{PLANET_GOVERNOR_LEVEL_PLUS}</span><!-- ENDIF --><!-- ENDIF --><!-- IF $PLANET_GOVERNOR_LEVEL -->{$PLANET_GOVERNOR_LEVEL}<!-- ENDIF --><!-- IF PLANET_GOVERNOR_LEVEL_MAX -->/{PLANET_GOVERNOR_LEVEL_MAX}<!-- ENDIF --><!-- IF $PLANET_GOVERNOR_LEVEL_MAX -->/{$PLANET_GOVERNOR_LEVEL_MAX}<!-- ENDIF -->
       </span>
 
       <!-- IF production.METAL_REST > 99999999999 || production.CRYSTAL_REST > 9999999999 || production.DEUTERIUM_REST_NUM > 9999999999 -->
