--- a/design/templates/OpenGame/planet_manage.tpl.html
+++ b/design/templates/OpenGame/planet_manage.tpl.html
@@ -143,7 +143,7 @@
     <!-- ENDIF -->
     <tr>
       <th>{L_colony_abandon}</th>
-      <th>{L_sys_password} <input type="password" name="abandon_confirm" maxlength="32" value="" /></th>
+      <th>{L_ov_password}<br /><input type="password" name="abandon_confirm" maxlength="32" value="" /></th>
       <th><input type="submit" name="abandon" value="{L_colony_abandon}" /></th>
      </tr>
   </table>
