USER-misc-39b6.27: Player can set their gender if not selected before. Also changed 'sex' for 'gender' for work/firewall/filters safety

--- a/design/templates/OpenGame/admin/admin_user.tpl.html
+++ b/design/templates/OpenGame/admin/admin_user.tpl.html
@@ -88,8 +88,8 @@
     <td>{email_2}</td>
   </tr>
   <tr>
-    <td>sex</td>
-    <td>{sex}</td>
+    <td>gender</td>
+    <td>{gender}</td>
   </tr>
   <tr>
     <td>avatar</td>
