--- a/design/templates/OpenGame/imperator.tpl.html
+++ b/design/templates/OpenGame/imperator.tpl.html
@@ -1,6 +1,7 @@
 <!-- IF USER_AVATAR --><br /><img src="{D_SN_ROOT_VIRTUAL}/images/avatar/avatar_{USER_ID}.png"><!-- ENDIF -->
 <h2>{L_imp_imperator} {user_username} <strong>{L_ov_rank}: <a href="stat.php?start={user_rank}"><span class="ov_user_rank">{user_rank} ({RANK_DIFF})</span>/<span class="ov_user_total">{USERS_TOTAL}</span></strong></a></strong></h2>
 <h3>{L_sys_from} {REGISTRATION_DATE}</h3>
+<h3>{L_sys_gender} {GENDER_TEXT}</h3>
 <!-- IF VACATION -->
 <h3>{L_sys_vacation_in}</h3>
 <!-- ENDIF -->
