--- a/design/templates/OpenGame/login_body.tpl.html
+++ b/design/templates/OpenGame/login_body.tpl.html
@@ -164,7 +164,7 @@
             <th>{L_Sex}</th>
 
             <th>
-              <select name="sex">
+              <select name="gender">
                 <option value="M" selected="selected">{L_Male}</option>
                 <option value="F">{L_Female}</option>
               </select>
