STA-fix-39b8.2: Fixed bar height calculation. Also added animation to bar transitions

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -563,7 +563,7 @@ tr[prod_mode] > :not(:first-child) > span:not([style]) { /* Content of empire ce
 }
 .stat_bar {
   width: 100%;
-  height: 100%;
+  height: 0;
 
   position: absolute;
   left: 0;
