--- a/design/templates/OpenGame/login_body.tpl.html
+++ b/design/templates/OpenGame/login_body.tpl.html
@@ -1,5 +1,5 @@
 <style type="text/css">
-@import url(./design/css/login.css);
+/* @import url(./design/css/login.css);*/
 </style>
 
 <script type="text/javascript"><!--
