BLITZ-feat-39b9.1: Registraton page for playing on Blitz

--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -74,6 +74,10 @@
     <!-- IF ADV_SEO_JAVASCRIPT -->
       {ADV_SEO_JAVASCRIPT}
     <!-- ENDIF -->
+
+    <!-- IF GAME_BLITZ_REGISTER && ! GAME_BLITZ -->
+    <div class="c_c"><input type="button" value="{L_sys_blitz_global_button}" onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}blitz_register.php');"/></div>
+    <!-- ENDIF -->
     <table class="markup" width="100%" id="global_page_markup">
       <tr>
         <td valign="top" align="center"><div style="margin: 0 auto" id="main_content_center">
