BLITZ-feat-39b9.2: Login and password generation and universe filling for Blitz

--- a/design/css/blitz_login_background.css
+++ b/design/css/blitz_login_background.css
@@ -61,7 +61,7 @@ and (min-width : 1224px) {
   {
       background-image: url(../images/blitz_bg-unauthorized.jpg);
       background-repeat: no-repeat;
-      background-size: auto 100%;
+      background-size: 100% auto ;
     background-position: bottom 0px right 0px;
   }
 }
@@ -74,7 +74,7 @@ and (min-width : 1824px) {
   {
       background-image: url(../images/blitz_bg-unauthorized.jpg);
       background-repeat: no-repeat;
-      background-size: auto 100%;
+      background-size: 100% auto ;
     background-position: bottom 0px right 0px;
   }
 }
