BLITZ-misc-39b9.5: Added link to Blitz on registration page

--- a/design/templates/OpenGame/blitz_register.tpl.html
+++ b/design/templates/OpenGame/blitz_register.tpl.html
@@ -38,6 +38,7 @@
     <h2>
       {L_sys_blitz_registration_player_name} {BLITZ_NAME}<br />
       {L_sys_blitz_registration_player_password} {BLITZ_PASSWORD}<br />
+      <a href="http://blitz.supernova.ws/">{L_sys_blitz_registration_server_link} http://blitz.supernova.ws/</a>
     </h2>
   <!-- ENDIF -->
 <!-- ENDIF -->
