--- a/design/templates/OpenGame/eco_queue.tpl.html
+++ b/design/templates/OpenGame/eco_queue.tpl.html
@@ -15,27 +15,17 @@
 <!-- ENDIF -->
 
 <script type="text/javascript"><!--
-sn_timers.unshift({
-  'id': '{$QUE_HTML}_{$QUE_ID}',
-  'type': 3,
-  'active': true,
-  'start_time': {TIME_NOW},
-  'options': {
-    'msg_done': '{LA_eco_que_empty}',//language['eco_que_empty'],
-    // 'url': document.location.href,
-    'template': '<div class="que_item fl" title="[UNIT_NAME]">\
-      <span class="unit_picture"><img src="{D_SN_ROOT_VIRTUAL}{dpath}gebaeude/[UNIT_ID].gif" align="top" width="100%" height="100%"></span>\
-      <span style="position: absolute; top: 0px; left: 0px; width: 100%; height: 2ex; font-size: 100%;" class="icon_alpha">[UNIT_LEVEL]</span>\
-      <span style="position: absolute; bottom: 0px; left: 0px; width: 100%; font-size: 100%;" class="icon_alpha">[UNIT_TIME]</span>\
-    </div>',
-    'que': [
-      <!-- BEGIN que -->
-        <!-- IF $QUE_ID == que.QUE  -->
-          ['{que.ID}', '{que.NAME}', {que.TIME}, {que.AMOUNT}, {que.LEVEL}, {que.TIME_FULL}],
-        <!-- ENDIF -->
-      <!-- END que -->
-    ]
-  }
-});
+sn_timers.unshift({'id': '{$QUE_HTML}_{$QUE_ID}', 'type': 3, 'active': true, 'start_time': {TIME_NOW}, 'options': {
+  'msg_done': '{LA_eco_que_empty}',
+  // 'url': document.location.href,
+  'template': '<div class="que_item fl" title="[UNIT_NAME]">\
+    <span class="unit_picture"><img src="{D_SN_ROOT_VIRTUAL}{dpath}gebaeude/[UNIT_ID].gif" align="top" width="100%" height="100%"></span>\
+    <span style="position: absolute; top: 0px; left: 0px; width: 100%; height: 2ex; font-size: 100%;" class="icon_alpha">[UNIT_LEVEL]</span>\
+    <span style="position: absolute; bottom: 0px; left: 0px; width: 100%; font-size: 100%;" class="icon_alpha">[UNIT_TIME]</span>\
+  </div>',
+  'que': [<!-- BEGIN que --><!-- IF $QUE_ID == que.QUE  -->
+    ['{que.ID}', '{que.NAME}', {que.TIME}, {que.AMOUNT}, {que.LEVEL}, {que.TIME_FULL}],
+  <!-- ENDIF --><!-- END que -->]
+}});
 --></script>
 <!-- ENDIF -->
