--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -57,17 +57,12 @@
                 <!-- IF GATE_JUMP_REST_TIME -->
                   {L_ov_gate_time_left} <span  id="gate_jump_time" class="error"></span>
                   <script type="text/javascript"><!--
-                    sn_timers.unshift({
-                      id: 'gate_jump_time',
-                      type: 0,
-                      active: true,
-                      start_time: '{TIME_NOW}',
-                      options: 
-                      {
-                        msg_done: '{L_gate_ready}',
-                        que: [['1', '', {GATE_JUMP_REST_TIME}, '1']]
-                      }
-                    });
+                    sn_timers.unshift({id: 'gate_jump_time', type: 0, active: true, start_time: '{TIME_NOW}', options: {
+                      msg_done: '{L_gate_ready}',
+                      que: [
+                        ['1', '', {GATE_JUMP_REST_TIME}, '1']
+                      ]
+                    }});
                   // --></script>
                 <!-- ELSE -->
                   <span class="ok">{L_gate_ready}</span>
