--- a/design/templates/OpenGame/planet_resources.tpl.html
+++ b/design/templates/OpenGame/planet_resources.tpl.html
@@ -17,7 +17,7 @@
       <td class="c_r" id='top_crystal'>{PLANET_CRYSTAL_TEXT}</td>
       <td class="c_r" id='top_deuterium'>{PLANET_DEUTERIUM_TEXT}</td>
       <!-- IF SN_IN_ALLY -->
-      <td class="c_r" id='top_deuterium'>{DARK_MATTER_TEXT}</td>
+      <td class="c_r" id='top_dark_matter'>{DARK_MATTER_TEXT}</td>
       <!-- ELSE -->
       <td class="c_r">{ENERGY_BALANCE}</td>
       <!-- ENDIF -->
@@ -44,9 +44,24 @@
     <!-- ENDIF -->
 
 <script type="text/javascript"><!--
-  sn_timers.unshift({id: 'top_metal', type: 1, active: true, start_time: {TIME_NOW}, options: {start_value: {PLANET_METAL}, per_second: {PLANET_METAL_PERHOUR} / 3600, max_value: {PLANET_METAL_MAX}, round: {RESOURCE_ROUNDING}}});
-  sn_timers.unshift({id: 'top_crystal', type: 1, active: true, start_time: {TIME_NOW}, options: {start_value: {PLANET_CRYSTAL}, per_second: {PLANET_CRYSTAL_PERHOUR} / 3600, max_value: {PLANET_CRYSTAL_MAX}, round: {RESOURCE_ROUNDING}}});
-  sn_timers.unshift({id: 'top_deuterium', type: 1, active: true, start_time: {TIME_NOW}, options: {start_value: {PLANET_DEUTERIUM}, per_second: {PLANET_DEUTERIUM_PERHOUR} / 3600, max_value: {PLANET_DEUTERIUM_MAX}, round: {RESOURCE_ROUNDING}}});
+  sn_timers.unshift({id: 'top_metal', type: 1, active: true, start_time: {TIME_NOW}, options: {
+    start_value: {PLANET_METAL},
+    per_second: {PLANET_METAL_PERHOUR} / 3600,
+    max_value: {PLANET_METAL_MAX},
+    round: {RESOURCE_ROUNDING}
+  }});
+  sn_timers.unshift({id: 'top_crystal', type: 1, active: true, start_time: {TIME_NOW}, options: {
+    start_value: {PLANET_CRYSTAL},
+    per_second: {PLANET_CRYSTAL_PERHOUR} / 3600,
+    max_value: {PLANET_CRYSTAL_MAX},
+    round: {RESOURCE_ROUNDING}}
+  });
+  sn_timers.unshift({id: 'top_deuterium', type: 1, active: true, start_time: {TIME_NOW}, options: {
+    start_value: {PLANET_DEUTERIUM},
+    per_second: {PLANET_DEUTERIUM_PERHOUR} / 3600,
+    max_value: {PLANET_DEUTERIUM_MAX},
+    round: {RESOURCE_ROUNDING}
+  }});
 // --></script>
 
     <!-- planet_resources EOF -->
